Remove snap scroll page on mobile mode. Fix turbolinks on homepage. Set param on url for page views on homepage. Move page view handling to stimulus

--- a/cmd/dcrdata/public/scss/scroller.scss
+++ b/cmd/dcrdata/public/scss/scroller.scss
@@ -22,6 +22,12 @@
   height: 100vh;
 }
 
+@media (max-width: 767px) {
+  .homepage-content {
+    scroll-snap-type: none;
+  }
+}
+
 .homepage-page {
   display: flex;
   align-items: start;
